apps/risf/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-risf
spec:
  selector:
    app: nginx-risf
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
