apps/risf/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: risf-ingress
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
    - host: hello-risf.local.domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-risf
                port:
                  number: 8080
  tls:
    - hosts:
        - hello-risf.local.domain
      secretName: risf-cert
